# docs/openapi.yaml
@@ -18,6 +18,12 @@ paths:
       summary: List all tasks
       tags:
         - Tasks
+      parameters:
+        - name: completed
+          in: query
+          required: false
+          schema:
+            type: boolean
       responses:
         '200':
           description: OK
