# src/controllers/taskController.js
@@ -1,10 +1,10 @@
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
+  const { completed } = req.query;
+  const tasks = await taskService.getAllTasks(completed ? JSON.parse(completed) : undefined);
   res.json(tasks);
 }
-
 export async function createTask(req, res, next) {
   const { title, completed } = req.body;
   const task = await taskService.createTask({ title, completed });
